# ADGC

./: .gitattributes  .gitignore  CMakeLists.txt  README.md
.github/workflows/: cmake.yml
cmake/: FindMKL.cmake
demo/: mnist_mlp.cc
include/autodiff/: consts.h  functional.h  graph.h  node.h  ops.h  tensor.h  variable.h
include/autodiff/component/: functional.h  node.h  ops.h  variable.h
include/autodiff/component/functional/: activation.h  loss.h  manipulation.h  normalization.h  reduction.h  tensor_basic.h  tensor_ops.h  vision.h
include/autodiff/layer/: convolution.h  dense.h  function.h  layer.h  layers.h  loss.h  normalization.h
include/autodiff/metric/: metric.h
include/autodiff/optimizer/: adam.h  gradient_descent.h  optimizer.h
include/data/: csv_dataset.h  data_utils.h  dataset.h  image_dataset.h
include/exception/: exception.h
include/tensor/: extension.h  mapper.h  tensor.h
include/utils/: graph_utils.h  math_utils.h  thread.h  utils.h
src/autodiff/: functional.cc  functional_impl.cc  graph.cc  node.cc  ops.cc  ops_impl.cc  tensor.tcc  variable.cc
src/autodiff/component/: functional.cc  functional_impl.cc  node.cc  ops.cc  ops_impl.cc  variable.cc
src/autodiff/component/functional/: activation.cc  loss.cc  manipulation.cc  normalization.cc  reduction.cc  tensor_basic.cc  tensor_ops.cc  vision.cc
src/autodiff/layer/: convolution.cc  dense.cc  layer.cc  layers.cc  loss.cc  normalization.cc
src/autodiff/metric/: metric.cc
src/autodiff/optimizer/: adam.cc  gradient_descent.cc  optimizer.cc
src/data/: csv_dataset.cc  data_utils.cc  image_dataset.cc
src/tensor/: extension.cc  extension.tcc  mapper.tcc  tensor.tcc  tensor_impl.cc  tensor_manip.tcc  tensor_numeric.tcc
src/utils/: math_utils.tcc  thread.cc  utils.cc  utils.tcc
test/: data_test.cc  graph_test.cc  layer_test.cc  math_test.cc  multi_thread_test.cc  ops_funcs_test.cc  optimizer_test.cc  tensor_extension_test.cc  tensor_test.cc  utils_test.cc
testdata/: test.csv
